--- a/AddressBookApp/src/main/resources/application.properties
+++ b/AddressBookApp/src/main/resources/application.properties
@@ -1,5 +1,16 @@
 spring.application.name=AddressBookApp
 
-Debug = true
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Krishna@12
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA / Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 # Server Configuration
 server.port=8080
