--- a/AddressBookApp/src/main/resources/application.properties
+++ b/AddressBookApp/src/main/resources/application.properties
@@ -1,16 +1,33 @@
 spring.application.name=AddressBookApp
 
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=Krishna@12
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Server Configuration
+server.port=8080
 
 # JPA / Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# Server Configuration
-server.port=8080
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/addressbook_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=Krishna@12
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Connection Pool Configuration
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.max-lifetime=1200000
+
+# Logging Configuration
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+
+# SQL Initialization
+spring.sql.init.mode=always
+spring.sql.init.platform=mysql
+spring.jpa.defer-datasource-initialization=true
